# sound-player

./: LICENSE  README.md  package.json  svelte.config.ts  vite.config.ts
.github/workflows/: build.yml
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: constants.rs  lib.rs  main.rs  player.rs  utils.rs
src-tauri/tests/: player.rs  utils.rs
src/components/icons/: custom-circle-pause.svelte  custom-circle-play.svelte
src/components/shared/: controls.svelte  drop-zone.svelte  header.svelte  hotkeys-settings.svelte  locale-settings.svelte  palette-settings.svelte  player.svelte  settings.svelte
src/lib/: hotkeys.ts  i18n.ts  player.ts  utils.ts
src/locales/: en.json  ru.json
src/routes/: +layout.ts  +page.svelte
src/routes/settings/: +page.svelte
src/stores/: audio-store.ts  hotkeys-store.ts  palette-store.ts  theme-store.ts
