[package]
name = "sound-player"
version = "0.1.2"
description = "Sound Player"
authors = ["mrkir"]
edition = "2021"

[lib]
name = "sound_player_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rodio = "0.17"
once_cell = "1.19"
tauri-plugin-fs = "2"
tauri-plugin-log = "2"
chrono = "0.4"
log = "0.4"
lofty = "0.18"
base64 = "0.22"
